--- a/templates/secret.html
+++ b/templates/secret.html
@@ -6,12 +6,25 @@
 
 <div class="card" style="width: 18rem;">
 	<div class="card-body">
-	  <h5 class="card-title">{{ user.username }}</h5>
-	  <h6 class="card-subtitle mb-2 text-muted">{{ user.first_name }} {{ user.last_name }}</h6>
-	  <p class="card-text">{{ user.email }}</p>
-	  <a href="/logout" class="btn-primary">logout</a>
+		<h5 class="card-title">{{ user.username }}</h5>
+		<h6 class="card-subtitle mb-2 text-muted">{{ user.first_name }} {{ user.last_name }}</h6>
+		<p class="card-text">{{ user.email }}</p>
+		<a href="/logout" class="btn-primary">logout</a>
+		<a href="/{{user.username}}/notes/add" class="btn-primary">Add a Note</a>
+		<form action="/users/{{user.username}}/delete" method="POST">
+			<button type="submit" class="btn-primary">Delete User</button>
+		</form>
+
 
 	</div>
-  </div>
+</div>
 
-{% endblock %}
+{% for note in notes %}
+<div class="card" style="width: 18rem;">
+	<div class="card-body">
+		<h5 class="card-title">{{ note.title }}</h5>
+		<p class="card-text">{{ note.content }}</p>
+		<a href="/notes/{{note.id}}/update" class="btn-primary">Update Note</a>
+		<a href="/notes/{{note.id}}/delete" class="btn-primary">Delete Note</a>
+		{% endfor %}
+		{% endblock %}
