--- a/templates/add_note.html
+++ b/templates/add_note.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %} {% block title %} Register new user {% endblock %} {%
-block content %}
+{% extends "base.html" %} {% block title %} Add a note! {% endblock %} {% block
+content %}
 
-<form action="/register" method="POST" id="register_form">
+<form action="/users/{{username}}/notes/add" method="POST" id="add_note_form">
   {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
   'hidden' %}
   <div class="form-group">
