--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,20 @@
-{% extends "base.html" %}
-
-{% block title %} Login {% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %} Login {% endblock %} {% block
+content %}
 
 <form action="/login" method="POST" id="login_form">
-    {{ form.hidden_tag() }}
-    {% for field in form if field.widget.input_type != 'hidden' %}
-    <div class='form-group'>
-        {{ field.label }}
-        {{ field(class="form-control") }}
-        <span>
-            {% if field.errors %}
-            {% for error in field.errors %}
-            <b class="text-danger">{{ error }}</b>
-            {% endfor %}
-            {% endif %}
-        </span>
-    </div>
+  {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
+  'hidden' %}
+  <div class="form-group">
+    {{ field.label }} {{ field(class="form-control") }}
+    <span>
+      {% if field.errors %} {% for error in field.errors %}
+      <b class="text-danger">{{ error }}</b>
+      {% endfor %} {% endif %}
+    </span>
+  </div>
 
-    {% endfor %}
-    <button type="submit" class="btn btn-primary">Submit</button>
+  {% endfor %}
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 {% endblock %}
