--- a/templates/secret.html
+++ b/templates/secret.html
@@ -1,30 +1,32 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block title %} {{user.first_name}}
+{{user.last_name}}'s notes {% endblock %} {% block content %}
 
-{% block title %} Secret Page {% endblock %}
-
-{% block content %}
-
-<div class="card" style="width: 18rem;">
-	<div class="card-body">
-		<h5 class="card-title">{{ user.username }}</h5>
-		<h6 class="card-subtitle mb-2 text-muted">{{ user.first_name }} {{ user.last_name }}</h6>
-		<p class="card-text">{{ user.email }}</p>
-		<a href="/logout" class="btn-primary">logout</a>
-		<a href="/{{user.username}}/notes/add" class="btn-primary">Add a Note</a>
-		<form action="/users/{{user.username}}/delete" method="POST">
-			<button type="submit" class="btn-primary">Delete User</button>
-		</form>
-
-
-	</div>
+<div class="card" style="width: 18rem">
+  <div class="card-body">
+    <h5 class="card-title">{{ user.username }}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">
+      {{ user.first_name }} {{ user.last_name }}
+    </h6>
+    <p class="card-text">{{ user.email }}</p>
+    <a href="/logout" class="btn btn-primary">logout</a>
+    <a href="/users/{{user.username}}/notes/add" class="btn btn-primary"
+      >Add a Note</a
+    >
+    <form action="/users/{{user.username}}/delete" method="POST">
+      <button type="submit" class="btn-primary">Delete User</button>
+    </form>
+  </div>
 </div>
 
 {% for note in notes %}
-<div class="card" style="width: 18rem;">
-	<div class="card-body">
-		<h5 class="card-title">{{ note.title }}</h5>
-		<p class="card-text">{{ note.content }}</p>
-		<a href="/notes/{{note.id}}/update" class="btn-primary">Update Note</a>
-		<a href="/notes/{{note.id}}/delete" class="btn-primary">Delete Note</a>
-		{% endfor %}
-		{% endblock %}
+<div class="card" style="width: 18rem">
+  <div class="card-body">
+    <h5 class="card-title">{{ note.title }}</h5>
+    <p class="card-text">{{ note.content }}</p>
+    <a href="/notes/{{note.id}}/update" class="btn btn-primary">Update Note</a>
+    <form action="/notes/{{note.id}}/delete" method="POST">
+      <button type="submit" class="btn-primary">Delete note</button>
+    </form>
+    {% endfor %} {% endblock %}
+  </div>
+</div>
